Fixes content overflow My Works/Mobile screen

--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,6 @@ form > div > button {
 .newsBlog {
   display: grid;
   margin: 1em 0;
-  max-height: 320px;
   max-width: 320px;
   width: 80vw;
   align-items: center;
@@ -220,13 +219,15 @@ form > div > button {
 .newsBlog > hr {
   margin-left: 3.5em;
   margin-right: 3.5em;
-  color: #ff8303;
+  background-color: #ff8303;
+  border: none;
+  height: 2px;
 }
 
 .newsBlog > p {
   display: flex;
   justify-content: center;
-  margin: 0.75em 2.5em;
+  margin: 0.75em 1.25em;
   font-size: 1rem;
 }
 
@@ -400,6 +401,11 @@ input:-webkit-autofill:active {
     justify-content: center;
   }
 
+  .newsBlog {
+    max-height: 320px;
+    height: 80vw;
+  }
+
   #footer {
     display: flex;
     flex-direction: row;
@@ -541,6 +547,11 @@ input:-webkit-autofill:active {
 
   .skillsContainer > div > p {
     font-size: 2em;
+  }
+
+  .newsBlog {
+    max-height: 320px;
+    height: 80vw;
   }
 
   #footerLogo {
